css/style.css
/* RESET */

* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

img {
    max-width: 100%;
}


/* GENERICS */

.flex {
    display: flex;
}


.container {
    width: 1180px;
    margin-left: auto;
    margin-right: auto;
    padding-top: 7rem;
    display: flex;
    flex-wrap: wrap;
}

/* MAIN */

.main-block {
    height: calc(100vh - 100px);
    width: 100vw;
    background-color: #000000;
}

.card {
    position: relative;
    width: calc((100% / 7) - .8rem);
    margin-right: .3rem;
    margin-bottom: .5rem;
}

.card>img {
    width: 100%;
}

.micro {
    position: absolute;
    bottom: 4px;
    left: 0;
    color: white;
    background-color: rgba(86, 82, 82, .7);
    padding: .5rem .2rem;
}

/* FOOTER */

.fixed {
    height: 100px;
    background-color: #222222;
    justify-content: space-between;
    padding: 0 1rem;
}

.iContainer {
    color: white;
    align-items: center;
}

.icon {
    font-size: 1.5rem;
    align-items: center;
    justify-content: center;
    text-align: justify;
    flex-direction: column;
    padding-right: 2rem;
}

button{
    padding: 2.5rem 2.5rem;
    background-color: #4A4A4A;
    color: red;
    font-weight: bold;
}

